syntax = "proto3";
package grpc_bug_demo;

message HealthCheckRequest {
    string service = 1;
    string loyalty_club_slug = 2;
}

message HealthCheckResponse {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    ServingStatus status = 1;
}

service Health {
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse) {}
    rpc CheckFailure(HealthCheckRequest) returns (HealthCheckResponse) {}
}
